feat: link JVM post to java-lab jvm experiments (EN + VI)